今日の利用がない場合、連絡帳記入と受付ができないようにする処理をコントローラに追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,19 @@ header {
   font-size: clamp(12px, 3vw, 20px);
 }
 //  ↑ここまでヘッダー
+// ↓フッター
+.wrapper {
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 105px;
+  box-sizing: border-box;
+}
+
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
 
 // ステッチ設定
 .stitch {
@@ -114,4 +127,36 @@ header {
 
 .pagination {
   justify-content: center;
+}
+
+.footer-menus {
+}
+
+.home-btn {
+  background-color: #55acee;
+  color: #ffffff;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border: none;
+  width: clamp(70px, 18vw, 150px);
+}
+.back-btn {
+  background-color: #3b5998;
+  color: #ffffff;
+  border: none;
+  width: clamp(70px, 18vw, 150px);
+}
+
+.how-to-btn {
+  background-color: #eb4654;
+  color: #ffffff;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border: none;
+  width: clamp(70px, 18vw, 150px);
+}
+
+.line {
+  border-bottom: 3px dashed #ffffff;
+  padding-bottom: 5px;
 }
