--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class="stitch-blue d-flex justify-content-center">
+  <div class="stitch-blue d-flex justify-content-center py-3 mt-4">
     <p class="mx-2 text-dark">2020 All right reserved.</p>
     <div class="git-icon">
       <a href="https://github.com/yasu0408/houday_web_note.git"><span class="fab fa-github text-dark"></span></a>
