--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,12 +73,14 @@ footer {
 
 // ステッチ設定
 .stitch {
-  font-size: 20px;
+  font-size: 15px;
+  color: black;
   padding: 0.2em 0.5em;
   margin: 1em 0 0.5em 0;
-  background: #fea993;
-  box-shadow: 0px 0px 0px 10px #fea993;
+  background: #d6ebff;
+  box-shadow: 0px 0px 0px 10px #d6ebff;
   border: dashed 2px white;
+  height: 30px;
 }
 .stitch-blue {
   font-size: 20px;
@@ -138,13 +140,13 @@ footer {
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
   border: none;
-  width: clamp(70px, 18vw, 150px);
+  width: clamp(100px, 18vw, 150px);
 }
 .back-btn {
   background-color: #3b5998;
   color: #ffffff;
   border: none;
-  width: clamp(70px, 18vw, 150px);
+  width: clamp(100px, 18vw, 150px);
 }
 
 .how-to-btn {
@@ -153,10 +155,20 @@ footer {
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   border: none;
-  width: clamp(70px, 18vw, 150px);
+  width: clamp(100px, 18vw, 150px);
 }
 
 .line {
   border-bottom: 3px dashed #ffffff;
   padding-bottom: 5px;
+}
+
+.submit-button {
+  display: inline-block;
+  text-decoration: none;
+  background: #668ad8;
+  color: #fff;
+  border-radius: 15px;
+  width: clamp(300px, 54vw, 450px);
+  border: none;
 }
