--- a/app/assets/stylesheets/calendars.scss
+++ b/app/assets/stylesheets/calendars.scss
@@ -1,10 +1,10 @@
 .calendar {
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
 }
 
-.calendar-submit {
+.mt-40 {
   margin-top: 40px;
 }
 
@@ -23,17 +23,7 @@
 }
 
 .calendar-button {
-  display: inline-block;
-  padding: 0.5em 1em;
-  text-decoration: none;
-  background: #668ad8;
-  color: #fff;
-  border-radius: 15px;
-  box-shadow: 0px 0px 0px 5px #668ad8;
-  border: dashed 2px #fff;
-  width: 307px;
-}
-
-.calendar-button:hover {
-  border: dotted 1px #fff;
+  background: cornflowerblue !important;
+  color: white !important;
+  border-radius: 15px !important;
 }
