--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -1,73 +1,5 @@
-.table {
-  width: clamp(375px, 65%, 450px) !important ;
-}
-
-.osare-table {
-  width: 100%;
-  table-layout: fixed;
-  border: none !important;
-  border-collapse: separate;
-  border-spacing: 7px 0px;
-}
-
-.osare-table th {
-  border: none !important;
-}
-
-.osare-table tbody td {
-  border: none !important;
-  background-color: #f2f5fc !important;
-  border-bottom: solid 2px #f9f9f9 !important;
-}
-
-/* ヘッダー */
-.osare-table thead th {
-  font-weight: bold;
-  border-radius: 10px 10px 0px 0px;
-}
-
-/* ボディ項目 */
-.osare-table tbody th {
-  background: #f2f5fc;
-  font-weight: bold;
-  border-bottom: solid 2px #f9f9f9 !important;
-  line-height: 4.5em;
-}
-
-/* ボディデータ */
-.osare-table tbody td {
-  text-align: center;
-}
-
-/* ヘッダー行　１列ごとの色変え */
-.bgc-b {
-  background: #81d4fa;
-}
-
-.bgc-p {
-  background: #ffbcff;
-}
-
-.bgc-y {
-  background: #ffffb2;
-}
-
-.bgc-g {
-  background: #c4ff89;
-}
-
-.bgc-gr {
-  background: grey;
-}
-
-.osare-table thead th:nth-child(5) {
-  background: #ffb2d8;
-}
-
-/* 最終行のボーダーをなくす */
-.osare-table tbody tr:last-child th,
-.osare-table tbody tr:last-child td {
-  border-bottom: none !important;
+.index-table-width {
+  width: clamp(300px, 65%, 450px) !important ;
 }
 
 /* スマホ調整 */
