--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,13 +1,10 @@
 <div class="d-flex justify-content-center">
-  <div class="stitch font text-center mb-4 w-50">
-    連絡帳一覧<br class="br-sp">
+  <div class="stitch font text-center mb-4 header-width">
+    連絡帳一覧
   </div>
 </div>
-<div class="font font-size text-center">
-  名前:<%= current_user.name %>
-</div>
 <div class="d-flex justify-content-center align-items-center">
-  <table class="table table-bordered table-striped mt-4 font">
+  <table class="table table-bordered table-striped mt-4 font index-table-width">
     <thead class="text-center table-head">
       <tr>
         <th scope="col">No</th>
@@ -20,7 +17,7 @@
         <tr>
           <th scope="row" class="text-center"><%= i %></th>
           <td class="break-word text-center"><%= l note.date, format: :short %></td>
-          <td class="break-word text-nowrap text-center">
+          <td class="break-word text-nowrap text-center ">
             <%= link_to note, class: "btn btn-info btn-third" do %>
               <i class="fas fa-eye"></i> <span class="d-none d-md-inline">確認</span>
             <% end %>
@@ -39,7 +36,7 @@
 <%= paginate @notes %>
 <% if current_user.notes.find_by(date: Date.today).nil? %>
   <div class="my-4 d-flex justify-content-center">
-    <%= link_to "今日の連絡帳を記入する", new_note_path, class: "calendar-button text-center mt-3"%>
+    <%= link_to "今日の連絡帳を記入する", new_note_path, class: "submit-button text-center py-3 px-2 font font-size"%>
   </div>
 <% end %>
 <%= render 'layouts/footer-menus' %>
