--- a/app/views/receptions/show.html.erb
+++ b/app/views/receptions/show.html.erb
@@ -1,48 +1,28 @@
 <div class="d-flex justify-content-center">
-  <div class="stitch font text-center mb-4">
+  <div class="stitch text-center mb-5 header-width">
     　今日の利用状況　
   </div>
 </div>
-<table class="osare-table osare-hikaku col2t text-center mt-4">
-  <thead>
-    <tr>
-      <th class="bgc-p">日付</th>
-      <th class="bgc-b">利用状況</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th><%=l @reception.arrive %></th>
-      <td>
-        <% if @reception.arrive.present? && @reception.leave.nil? %>
-          現在利用中
-        <% elsif @reception.present? && @reception.leave.present? %>
-          現在送迎中
-        <% else %>
-          利用予定あり
-        <% end %>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<table class="osare-table osare-hikaku col2t text-center mt-3">
-  <thead>
-    <tr>
-      <th class="bgc-y">来所時間</th>
-      <th class="bgc-g">退所時間</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="py-4"><%=l @reception.arrive, format: :long %></td>
-      <td class="py-4">
-        <% if @reception.leave.present? %>
-          <%=l @reception.leave, format: :long %>
-        <% else %>
-          ---
-        <% end %>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="stitch-index bgc-pink font text-center mb-2">利用日</div>
+<div class="mb-3 font text-center"><%=l @reception.arrive, format: :very_long %></div>
+<div class="stitch-index bgc-org font text-center mb-2">利用状況</div>
+<div class="mb-3 font text-center">
+  <% if @reception.arrive.present? && @reception.leave.nil? %>
+    現在利用中
+  <% elsif @reception.present? && @reception.leave.present? %>
+    現在送迎中
+  <% else %>
+    利用予定あり
+  <% end %>
+</div>
+<div class="stitch-index bgc-green font text-center mb-2">来所時間</div>
+<div class="mb-3 font text-center"><%=l @reception.arrive, format: :long %></div>
+<div class="stitch-index bgc-blue font text-center mb-2">退所時間</div>
+<div class="mb-3 font text-center">
+  <% if @reception.leave.present? %>
+    <%=l @reception.leave, format: :long %>
+  <% else %>
+    ---
+  <% end %>
+</div>
 <%= render 'layouts/footer-menus' %>
