受付がなくても今日の利用状況が閲覧できるように条件分岐を追加

--- a/app/assets/stylesheets/receptions.scss
+++ b/app/assets/stylesheets/receptions.scss
@@ -37,6 +37,11 @@
   background-color: #f0ffff;
   box-shadow: 0 0 0 2px #f0ffff, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
 }
+
+.bgc-grey {
+  background-color: #dcdcdc;
+  box-shadow: 0 0 0 2px #dcdcdc, 2px 1px 6px 2px rgba(10, 10, 0, 0.5);
+}
 .stitch-index {
   padding: 4px 10px;
   margin-bottom: 1em;
