--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="d-flex justify-content-center align-items-center">
-  <table class="table table-bordered table-striped mt-4 font index-table-width">
+  <table class="table table-bordered table-striped mt-4 font format-width">
     <thead class="text-center table-head">
       <tr>
         <th scope="col">No</th>
