--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -9,34 +9,32 @@
     padding: 0;
   }
 }
-
-/*（共通）　項目の多いテーブルの幅を調整*/
-@media (max-width: 767px) {
-  .col6t th,
-  .col6t td {
-    font-size: 0.4em;
-    padding: 10px 0px;
-  }
-
-  .col5t th,
-  .col5t td {
-    font-size: 0.5em;
-    padding: 10px 0px;
-  }
-
-  .col4t th,
-  .col4t td {
-    font-size: 0.7em;
-    padding: 10px 5px;
-  }
-
-  .col3t th,
-  .col3t td {
-    font-size: 0.8em;
-    padding: 10px 10px;
-  }
+// 連絡帳のindexページのボタン
+.btn-third {
+  width: 33.33333%;
+  /* 未対応ブラウザ用 */
+  width: -webkit-calc(100% / 3);
+  /* ベンダープレフィックス */
+  width: calc(100% / 3);
 }
-.table th,
-.table td {
-  vertical-align: middle !important;
+.notes-index-btn {
+  color: #333 !important;
+  width: clamp(95px, 31%, 145px) !important;
+  border-radius: 2px;
+}
+
+.pagination > li > a {
+  border: none !important; /*枠線をなくす*/
+  color: #696969 !important; /*文字の色を変える*/
+}
+
+/* 表示しているページ番号のデザイン */
+.pagination > .active > a {
+  background: #93c9ff !important; /*背景の色を変える*/
+  border-radius: 30px !important; /*角を丸くする*/
+}
+
+/*ホバー時のデザイン*/
+.pagination > li > a:hover {
+  border-radius: 30px !important ; /*角を丸くする*/
 }
