モーダルのファイル名を変更

--- a/app/assets/stylesheets/receptions.scss
+++ b/app/assets/stylesheets/receptions.scss
@@ -6,7 +6,7 @@
   width: clamp(60px, 15vw, 130px);
   height: clamp(60px, 15vw, 130px);
   font-size: clamp(12px, 3vw, 20px);
-  background-color: #fea993;
+  background-color: #668ad8;
   border-radius: 50%;
   white-space: nowrap;
   font-family: "Hiragino Maru Gothic Pro", "ヒラギノ丸ゴ Pro W4", sans-serif;
