--- a/app/views/receptions/_reception_card.html.erb
+++ b/app/views/receptions/_reception_card.html.erb
@@ -1,20 +1,3 @@
-<%# <div class="d-flex justify-content-center mt-3 mb-3"> %>
-<%# <section class="card border-dark mt-3 font header-width" > %>
-<%# <div class="card-header text-left font-size"> %>
-<%# なまえ：<%= current_user.name %>
-<%# </div> %>
-<%# <div class="card-body"> %>
-<%# <p class="card-text font font-size">きたじかん　： %>
-<%# <%= l @reception&.arrive, format: :short if @reception.present? %>
-<%# </p> %>
-<%# </div> %>
-<%# <div class="card-body"> %>
-<%# <p class="card-text font font-size">かえるじかん： %>
-<%# <%= l @reception.leave, format: :short if @reception.present? && @reception.leave.present? %>
-<%# </p> %>
-<%# </div> %>
-<%# </section> %>
-<%# </div> %>
 <div class="stitch-index bgc-pink font text-center mb-2">なまえ</div>
 <div class="mb-3 font text-center"><%= current_user.name %></div>
 <div class="stitch-index bgc-green font text-center mb-2">きたじかん</div>
@@ -32,13 +15,13 @@
 <div>
   <% if @reception.nil? %>
     <div class="d-flex justify-content-center">
-      <%= button_to "ついたよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button arrive-active mt-4 mr-3", remote: true } %>
-      <%= button_to "かえるよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button mt-4 btn-disable ml-3", disabled: true } %>
+      <%= button_to "ついたよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button arrive-active mr-4", remote: true } %>
+      <%= button_to "かえるよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button btn-disable ml-4", disabled: true } %>
     </div>
   <% elsif @reception.leave.nil? %>
     <div class="d-flex justify-content-center">
-      <%= button_to "ついたよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button mt-4 mr-3 btn-disable ml-3", disabled: true } %>
-      <%= button_to "かえるよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button mt-4", remote: true } %>
+      <%= button_to "ついたよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button mr-4 btn-disable", disabled: true } %>
+      <%= button_to "かえるよ",{controller: 'receptions', action: 'update'},{method: :patch, class: "button-text reception-button ml-4", remote: true } %>
     </div>
   <% else %>
   <% end %>
