--- a/app/views/modals/_calendars-edit-modal.html.erb
+++ b/app/views/modals/_calendars-edit-modal.html.erb
@@ -9,6 +9,11 @@
       </div>
       <div class="modal-body">
         ①下記カレンダーから利用日を選んでタップ<br>
+        選択された日付は下記のように色が変化します<br>
+        <a class="modal-circle" href="~">
+          <span>15</span>
+        </a>
+        <br>
         <br>
         ②送信ボタンをタップ<br>
         <br>
