--- a/app/views/modals/_notes-index-modal.html.erb
+++ b/app/views/modals/_notes-index-modal.html.erb
@@ -8,13 +8,13 @@
         </button>
       </div>
       <div class="modal-body">
-        ①『確認』ボタンで連絡帳を閲覧<br>
+        <i class="fas fa-book-open"></i>をタップで連絡帳を閲覧<br>
         <br>
-        ②『変更』ボタンで連絡帳を編集<br>
+        <i class="fas fa-exchange-alt"></i>をタップで連絡帳を編集<br>
         <br>
-        ③『削除』ボタンで連絡帳を削除<br>
+        <i class="far fa-times-circle"></i>をタップで連絡帳を削除<br>
         <br>
-        ④『今日の連絡帳を記入』ボタンで連絡帳の作成<br>
+        <i class="far fa-edit"></i>をタップで連絡帳の作成<br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">とじる</button>
