--- a/app/views/modals/_receptions-show-modal.html.erb
+++ b/app/views/modals/_receptions-show-modal.html.erb
@@ -7,7 +7,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body text-left">
         下記４点が確認可能<br>
         <br>
         ・利用日<br>
