--- a/app/views/modals/_calendars-edit-modal.html.erb
+++ b/app/views/modals/_calendars-edit-modal.html.erb
@@ -8,16 +8,25 @@
         </button>
       </div>
       <div class="modal-body">
-        ①下記カレンダーから利用日を選んでタップ<br>
-        選択された日付は下記のように色が変化します<br>
-        <a class="modal-circle" href="~">
-          <span>15</span>
-        </a>
+        【利用日の投稿】<br>
+        カレンダーから利用日を選んでタップ<br>
+        <div class="d-flex align-items-center">
+          <div>タップ前</div>
+          <div class="modal-circle">15</div>
+          <div>タップ後</div>
+          <div class="modal-circle-selected">15</div>
+          <div>色が変化します</div>
+        </div>
         <br>
-        <br>
-        ②送信ボタンをタップ<br>
-        <br>
-        ※利用日の変更は再度タップすることで変更可能<br>
+        【利用日の取り消し】<br>
+        カレンダーから利用日を選んでタップ<br>
+        <div class="d-flex align-items-center">
+          <div>タップ前</div>
+          <div class="modal-circle-selected">15</div>
+          <div>タップ後</div>
+          <div class="modal-circle">15</div>
+          <div>色が変化します</div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">とじる</button>
