--- a/app/views/modals/_receptions-edit-modal.html.erb
+++ b/app/views/modals/_receptions-edit-modal.html.erb
@@ -12,7 +12,7 @@
         <br>
         ②利用者が退所したら【かえるよ】ボタンをタップ<br>
         <br>
-        ※『今日の利用状況』から詳細が確認可能
+        ※<%= link_to "『今日の利用状況』",receptions_path %>から詳細が確認可能
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">とじる</button>
