--- a/app/views/modals/_calendars-edit-modal.html.erb
+++ b/app/views/modals/_calendars-edit-modal.html.erb
@@ -9,28 +9,28 @@
       </div>
       <div class="modal-body">
         【利用日の投稿】<br>
-        カレンダーから利用日を選んでタップ<br>
+        １５日を利用したい場合<br>
         <div class="d-flex align-items-center">
-          <div>タップ前</div>
           <div class="modal-circle">15</div>
-          <div>タップ後</div>
+          <div>タップ後に</div>
           <div class="modal-circle-selected">15</div>
-          <div>色が変化します</div>
+          <div>にして送信</div>
         </div>
+        ※複数選択も可能<br>
         <br>
         【利用日の取り消し】<br>
-        カレンダーから利用日を選んでタップ<br>
+        １５日を取り消したい場合<br>
         <div class="d-flex align-items-center">
-          <div>タップ前</div>
           <div class="modal-circle-selected">15</div>
-          <div>タップ後</div>
+          <div>タップ後に</div>
           <div class="modal-circle">15</div>
-          <div>色が変化します</div>
+          <div>にして送信</div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">とじる</button>
+        ※複数選択も可能<br>
+        <br>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">とじる</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
