--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,7 +209,8 @@ footer {
   width: 30px;
   height: 30px;
   line-height: 30px;
-  background-color: #dcdcdc;
+  background-color: #fff;
+  border: dashed 1px black;
   border-radius: 50%;
   color: black;
   text-align: center;
@@ -218,4 +219,16 @@ footer {
 
 .modal-font {
   font-size: 12px;
+}
+
+.circle-font {
+  font-size: 5px;
+}
+
+.calendar-width {
+  width: 308px;
+}
+
+.space {
+  width: 100px;
 }
